# Calc

Calc/: CMakeLists.txt  calc.cpp  calc.h  main.cpp  operation.h  token.h
DllBuilder/: CMakeLists.txt  main.cpp  operation.h
